fix for wp class 'aligncenter' not working

--- a/wp-content/themes/ideum/stylesheets/components/_content.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_content.scss
@@ -659,3 +659,14 @@
     display: inline-block !Important;
   }
 }
+
+img {
+  &.aligncenter {
+    display:block;
+    float: none;
+    margin: 20px auto !important;
+  }
+  &.alignright {
+    float: right;
+  }
+}
